#AUTOMAKE_OPTIONS=foreign 
bin_PROGRAMS=shotgun test 
shotgun_SOURCES=main.c \
		log.c  \
		adlist.c \
		dict.c \
		sgconfig.c \
		third/json-c/arraylist.c \
		third/json-c/debug.c \
		third/json-c/json_c_version.c \
		third/json-c/json_object.c \
		third/json-c/json_object_iterator.c \
		third/json-c/json_tokener.c \
		third/json-c/json_util.c \
		third/json-c/linkhash.c \
		third/json-c/printbuf.c \
		controller.c \
		master.c \
		channel.c 
test_SOURCES= test_main.c \
		log.c \
		channel.c 
